--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@
     padding: 0;
 }
 
-
 h1, h2 {
     font-size:var(--BIG-TEXT);
     margin:var(--MARGIN);
@@ -36,6 +35,17 @@ h3 {
 p {
     font-size:var(--SMALL-TEXT);
     margin:var(--MARGIN);
+}
+
+a {
+    list-style: none;
+    outline: none;
+    color:white;
+    text-decoration:none;
+}
+
+a:focus {
+    color:white;
 }
 
 .logo-text {
@@ -337,10 +347,15 @@ main {
     margin:var(--BIG-MARGIN) 0;
 }
 
-.services-container > img {
+.icon {
     width:auto;
     height:100px;
     margin-right:var(--BIG-MARGIN);
+    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+
+.services-container:hover > .icon {
+    transform: scale(1.2);
 }
 
 
@@ -351,13 +366,23 @@ main {
 
 /* =============== CONTACT ================ */
 
+#contact {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url("./images/contact-bg.jpg");
+    background-position: center;
+    background-size: cover;
+}
+
 .contact-form-container {
     padding: 30px;
     border-radius: 10px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 5px 20px 20px rgba(0, 0, 0, 0.5);
     max-width: 400px;
     width: 100%;
-    background:rgba(190,190,190,0.8);
+    background:rgba(190,190,190,0.9);
+    margin:var(--BIG-MARGIN);
 }
 
 .contact-form h2 {
@@ -424,6 +449,11 @@ footer {
     color: #fff;
     text-align: center;
     padding: 1rem 0;
+}
+
+.logo-footer{
+    width:200px;
+    height:auto;
 }
 
 /* =============== END OF LANDING PAGE ================ */
