--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 :root {
     --MAIN-COLOR:#252e43;
     --SECONDARY-COLOR:#252e43;
-    --THIRD-COLOR:#252e43;;
+    --THIRD-COLOR:#252e43;
+    --TEXT-COLOR:rgba(255,255,255,0.8);
     --BIG-TEXT:60px;
     --MEDIUM-TEXT:24px;
     --SMALL-TEXT:20px;
@@ -18,6 +19,15 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    color:var(--TEXT-COLOR);
+}
+
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    line-height: 1.6;
+    background-color:var(--MAIN-COLOR);
 }
 
 h1, h2 {
@@ -40,28 +50,22 @@ p {
 a {
     list-style: none;
     outline: none;
-    color:white;
     text-decoration:none;
 }
 
 a:focus {
-    color:white;
+    color:rgba(255,255,255,0.1);
 }
 
 .logo-text {
     font-size:var(--MEDIUM-TEXT);
-    color:black;
 }
 
 .small-text {
     font-size: var(--SMALL-TEXT);
     font-weight: bold;
-    color:white;
 }
 
-.black-text {
-    color:black;
-}
 
 /* @media only screen and (max-width: 1026px) {
     :root {
@@ -75,12 +79,7 @@ a:focus {
     
 } */
 
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    line-height: 1.6;
-}
+
 
 section {
     padding: 2rem 0;
@@ -122,7 +121,6 @@ section {
     border-radius:var(--BORDER-RADIUS);
     font-size: 18px;
     background-color:#4287f5;
-    color:white;
     text-align: center;
     font-weight: bold;
     border: none;
@@ -171,7 +169,6 @@ section {
 
 header {
     background-color: transparent;
-    color: white;
     padding: var(--padding);
     z-index:10;
     position: absolute;
@@ -212,7 +209,6 @@ nav ul li {
 }
 
 nav ul li a {
-    color: white;
     text-decoration: none;
     position: relative;
     font-size: var(--SMALL-TEXT);
@@ -243,7 +239,6 @@ nav ul li a::after {
     height: 2px;
     bottom: 0;
     left: 0;
-    background-color: white;
     transform: scaleX(0);
     transform-origin: bottom right;
     transition: transform 0.25s ease-out;
@@ -316,7 +311,7 @@ nav ul li a:hover::after {
 
 /* =============== LANDING PAGE ================ */
 main {
-    height: 90vh;
+    height: 100vh;
     width: 100%;
     background-color: var(--MAIN-COLOR);
     margin: 0;
@@ -338,8 +333,9 @@ main {
 
 /* =============== SERVICES ================ */
 
-#about {
+#services {
     margin-top:10vh;
+    background-color: var(--MAIN-COLOR);
 }
 
 .services-container {
